--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.1",
-    "react": "^19.2.1",
     "lucide-react": "^0.556.0",
-    "recharts": "^3.5.1",
-    "react-syntax-highlighter": "^16.1.0"
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-syntax-highlighter": "^16.1.0",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "imagemin": "^9.0.1",
+    "imagemin-pngquant": "^10.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
